[gd_scene load_steps=3 format=3 uid="uid://cd8iri7yfheoo"]

[ext_resource type="Script" uid="uid://dis26t6l2k1ke" path="res://scenes/AttributesDialog.gd" id="1_ahroa"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rq5a2"]
bg_color = Color(0, 0, 0, 1)

[node name="AttributesDialog" type="Control"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 3
anchor_left = 0.4
anchor_top = 0.18
anchor_right = 0.6
anchor_bottom = 0.79
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ahroa")

[node name="Background" type="Panel" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_rq5a2")

[node name="Title" type="Label" parent="Background"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
text = "Attributes"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AttributesList" type="VBoxContainer" parent="Background"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.1
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 0.472008
offset_bottom = -29.28
grow_horizontal = 2
grow_vertical = 2

[node name="SelectButton" type="Button" parent="Background"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -31.0
grow_horizontal = 2
grow_vertical = 0
disabled = true
text = "Select"

[connection signal="pressed" from="Background/SelectButton" to="." method="_on_select_button_pressed"]
[connection signal="pressed" from="Background/SelectButton" to="Background/AttributesList" method="_on_select_button_pressed"]
